<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="search_hint">Search news…</string>
    <string name="cd_navigate_back">Navigate back</string>
    <string name="cd_clear_search">Clear search query</string>
    <string name="start_typing_to_search">Start typing to search for news articles.</string>
    <string name="error_searching_news">Error searching news: %1$s</string>
    <string name="no_results_found_for_query">No results found for \"%1$s\"</string>
    <string name="news_article_image_description">Image for news article</string>
    <string name="error_loading_more_news">Error loading more news: %1$s</string>
    <string name="error_network">Network error. Please check your connection.</string>
    <string name="error_server">Server error. Please try again later.</string>
    <string name="error_http">An unexpected error occurred (Code: %1$d).</string>
    <string name="error_unknown">An unknown error occurred.</string>
    <string name="no_more_news_available">No more news item available.</string>
    <string name="search_query_too_short">Please enter at least %d characters to search</string>
</resources>